tests/snapshots/parser__statements__blank_lines_between.snap
---
source: tests/parser.rs
expression: "parse(\"a()\\n\\n\\nb()\")"
---
Ok(
    [
        Expr(
            Call {
                callee: Identifier(
                    "a",
                    Span {
                        start: 0,
                        end: 1,
                    },
                ),
                args: [],
                span: Span {
                    start: 0,
                    end: 3,
                },
            },
        ),
        Expr(
            Call {
                callee: Identifier(
                    "b",
                    Span {
                        start: 6,
                        end: 7,
                    },
                ),
                args: [],
                span: Span {
                    start: 6,
                    end: 9,
                },
            },
        ),
    ],
)
