tests/snapshots/parser__statements__newline_separated.snap
---
source: tests/parser.rs
expression: "parse(\"a()\\nb()\")"
---
Ok(
    [
        Expr(
            Call {
                callee: Identifier(
                    "a",
                    Span {
                        start: 0,
                        end: 1,
                    },
                ),
                args: [],
                span: Span {
                    start: 0,
                    end: 3,
                },
            },
        ),
        Expr(
            Call {
                callee: Identifier(
                    "b",
                    Span {
                        start: 4,
                        end: 5,
                    },
                ),
                args: [],
                span: Span {
                    start: 4,
                    end: 7,
                },
            },
        ),
    ],
)
