tests/snapshots/parser__statements__no_trailing_terminator.snap
---
source: tests/parser.rs
expression: "parse(\"f()\")"
---
Ok(
    [
        Expr(
            Call {
                callee: Identifier(
                    "f",
                    Span {
                        start: 0,
                        end: 1,
                    },
                ),
                args: [],
                span: Span {
                    start: 0,
                    end: 3,
                },
            },
        ),
    ],
)
